...
              <Subtitle>No hay créditos disponibles</Subtitle>
            )}
          />
        </S.ListContainer>
        <Spacer size={37} />
        <Button
          title="Seleccionar crédito"
          disabled={typeof selectedCredit === "undefined"}
          onPress={onContinuePressed}
        />
      </S.ModalContainer>
    </S.Container>
  );
...
